dark mode on timer page, need css fix

--- a/assets/styles/timer.scss
+++ b/assets/styles/timer.scss
@@ -1,6 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Orbitron&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans&family=Poiret+One&family=Raleway&display=swap');
 
+.dark-mode {
+  background: linear-gradient(180deg, #ffffff, #9e9e9e);
+  color: #096f86;
+
+  .index-wrapper {
+    .controls {
+      button {
+        color: #096f86;
+        border-color: #096f86;
+      }
+    }
+  }
+}
+
 body {
   background: linear-gradient(0deg, #000000, #3d3e3d);
   color: white;
@@ -10,6 +24,87 @@ body {
   justify-content: center;
   height: 100vh;
   margin: 0;
+
+  .dark-mode-switch {
+    display: flex;
+    justify-content: flex-end;
+    padding: 0 15px;
+
+    .switch {
+      display: inline-block;
+      width: 60px;
+      height: 34px;
+      position: absolute;
+      top: 30;
+      outline: none;
+
+      input {
+        opacity: 0;
+        width: 0;
+        height: 0;
+      }
+
+      // input
+      .slider {
+        position: absolute;
+        cursor: pointer;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: #17d4fe;
+        -webkit-transition: 0.6s;
+        transition: 0.6s;
+
+        // circle inside input
+        &:before {
+          position: absolute;
+          content: '';
+          height: 26px;
+          width: 26px;
+          left: 4px;
+          bottom: 4px;
+          background-color: #17d4fe;
+          -webkit-transition: 0.6s;
+          transition: 0.6s;
+        }
+      }
+
+      input {
+        &:checked + .slider {
+          background-color: #17d4fe;
+        }
+
+        &:focus + .slider {
+          box-shadow: none;
+        }
+
+        &:checked + .slider:before {
+          -webkit-transform: translateX(26px);
+          -ms-transform: translateX(26px);
+          transform: translateX(26px);
+        }
+      }
+
+      .slider.round {
+        border-radius: 34px;
+        outline: none;
+
+        &:before {
+          border-radius: 50%;
+          background-color: white;
+        }
+      }
+    }
+
+    p {
+      position: absolute;
+      top: 68;
+      margin: 0;
+      padding-right: 15px;
+      font-size: 30px;
+    }
+  }
 
   .timer-wrapper {
     margin: 0 auto;
